chore(i18n): update translations (#1335)

--- a/i18n/bn-IN.properties
+++ b/i18n/bn-IN.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = ডাউনলোড করুন
 be.sidebarVersions.empty = এই ফাইলের জন্য কোনও আগের সংস্করণ উপলব্ধ নেই।
 # Label for the version preview action.
 be.sidebarVersions.preview = প্রিভিউ
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = বর্তমান করুন
 # Label for the version restore action.
 be.sidebarVersions.restore = রিস্টোর করুন
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = {name}রিস্টোর করেছে
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = সংস্করণের ইতিহাস
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = টগল করুন
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = সংস্করণের নম্বর {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = অজানা
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = আকার: সবচেয়ে ছোট → সবচেয়ে বড়
 # Size descending option shown in the share access drop down select.
