--- a/i18n/es-ES.properties
+++ b/i18n/es-ES.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Descargar
 be.sidebarVersions.empty = No hay versiones anteriores disponibles para este archivo.
 # Label for the version preview action.
 be.sidebarVersions.preview = Previsualizar
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Actualizar
 # Label for the version restore action.
 be.sidebarVersions.restore = Restaurar
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Restaurada por {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Historial de versiones
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Alternar
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = Versión {versionNumber}
 be.sidebarVersions.versionNumberLabel = Versión número {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Desconocido
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Tamaño: menor → mayor
 # Size descending option shown in the share access drop down select.
