--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Lataa
 be.sidebarVersions.empty = Tästä tiedostosta ei ole saatavana aiempia versioita.
 # Label for the version preview action.
 be.sidebarVersions.preview = Esikatselu
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Tee nykyiseksi
 # Label for the version restore action.
 be.sidebarVersions.restore = Palauta
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Palauttanut {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versiohistoria
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Vaihda
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = Versio {versionNumber}
 be.sidebarVersions.versionNumberLabel = Versionumero {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Tuntematon
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Koko: pienin → suurin
 # Size descending option shown in the share access drop down select.
