--- a/i18n/hi-IN.properties
+++ b/i18n/hi-IN.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = डाउनलोड करें
 be.sidebarVersions.empty = इस फ़ाइल के लिए पहले के कोई वर्ज़न उपलब्ध नहीं हैं.
 # Label for the version preview action.
 be.sidebarVersions.preview = पूर्वावलोकन करें
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = वर्तमान बनाएँ
 # Label for the version restore action.
 be.sidebarVersions.restore = रीस्टोर करें
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = {name} ने रीस्टोर किया
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = वर्ज़न इतिहास
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = टॉगल करें
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = वर्ज़न {versionNumber}
 be.sidebarVersions.versionNumberLabel = वर्ज़न नंबर {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = अज्ञात
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = आकार: सबसे छोटा → सबसे बड़ा
 # Size descending option shown in the share access drop down select.
