--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Scarica
 be.sidebarVersions.empty = Non sono disponibili versioni precedenti di questo file.
 # Label for the version preview action.
 be.sidebarVersions.preview = Anteprima
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Attualizza
 # Label for the version restore action.
 be.sidebarVersions.restore = Ripristina
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Ripristinata da {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Cronologia versioni
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Cambia
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Numero versione: {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Sconosciuto
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Dimensioni: Minime → Massime
 # Size descending option shown in the share access drop down select.
