--- a/i18n/ko-KR.properties
+++ b/i18n/ko-KR.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = 다운로드
 be.sidebarVersions.empty = 이 파일에 사용 가능한 이전 버전이 없습니다.
 # Label for the version preview action.
 be.sidebarVersions.preview = 미리 보기
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = 최신으로 지정
 # Label for the version restore action.
 be.sidebarVersions.restore = 복원
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = 복원한 사용자: {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = 버전 기록
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = 전환
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = 버전 번호 {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = 알 수 없음
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = 크기: 가장 작음 → 가장 큼
 # Size descending option shown in the share access drop down select.
