--- a/i18n/ru-RU.properties
+++ b/i18n/ru-RU.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Скачать
 be.sidebarVersions.empty = Нет предыдущих версий для этого файла.
 # Label for the version preview action.
 be.sidebarVersions.preview = Предпросмотр
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Сделать текущей
 # Label for the version restore action.
 be.sidebarVersions.restore = Восстановить
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Восстановлено пользователем {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Журнал версий
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Переключение
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = Версия {versionNumber}
 be.sidebarVersions.versionNumberLabel = Номер версии: {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Неизвестно
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Размер: по возрастанию
 # Size descending option shown in the share access drop down select.
