--- a/i18n/sv-SE.properties
+++ b/i18n/sv-SE.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Hämta
 be.sidebarVersions.empty = Inga tidigare versioner är tillgängliga för den här filen.
 # Label for the version preview action.
 be.sidebarVersions.preview = Förhandsgranska
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Gör aktuell
 # Label for the version restore action.
 be.sidebarVersions.restore = Återställ
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Återställd av {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versionshistorik
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Växla
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Versionsnummer {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Okänd
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Storlek: minst → störst
 # Size descending option shown in the share access drop down select.
