--- a/i18n/zh-TW.properties
+++ b/i18n/zh-TW.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = 下載
 be.sidebarVersions.empty = 此檔案沒有先前的版本可用。
 # Label for the version preview action.
 be.sidebarVersions.preview = 預覽
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = 還原為最新
 # Label for the version restore action.
 be.sidebarVersions.restore = 還原
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = 已由 {name} 還原
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = 版本記錄
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = 切換
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = 版本編號 {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = 未知
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = 大小：最小 → 最大
 # Size descending option shown in the share access drop down select.
