--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Download
 be.sidebarVersions.empty = Ingen tidligere versioner er tilgængelige for denne fil.
 # Label for the version preview action.
 be.sidebarVersions.preview = Vis eksempel
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Gør til nuværende
 # Label for the version restore action.
 be.sidebarVersions.restore = Gendan
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Gendannet af {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versionshistorik
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Skift
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Versionsnummer {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Ukendt
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Størrelse: Mindst → Størst
 # Size descending option shown in the share access drop down select.
