--- a/i18n/de-DE.properties
+++ b/i18n/de-DE.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Herunterladen
 be.sidebarVersions.empty = Für diese Datei sind keine vorherigen Versionen verfügbar.
 # Label for the version preview action.
 be.sidebarVersions.preview = In der Vorschau anzeigen
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Als aktuell festlegen
 # Label for the version restore action.
 be.sidebarVersions.restore = Wiederherstellen
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Von {name} wiederhergestellt
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versionsverlauf
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Umschalten
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Versionsnummer {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Unbekannt
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Größe: Kleinste → Größte
 # Size descending option shown in the share access drop down select.
