--- a/i18n/en-GB.properties
+++ b/i18n/en-GB.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Download
 be.sidebarVersions.empty = No prior versions are available for this file.
 # Label for the version preview action.
 be.sidebarVersions.preview = Preview
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Make current
 # Label for the version restore action.
 be.sidebarVersions.restore = Restore
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Restored by {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Version history
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Toggle
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Version number {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Unknown
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Size: smallest → largest
 # Size descending option shown in the share access drop down select.
