--- a/i18n/fr-FR.properties
+++ b/i18n/fr-FR.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Télécharger
 be.sidebarVersions.empty = Aucune version antérieure n'est disponible pour ce fichier.
 # Label for the version preview action.
 be.sidebarVersions.preview = Prévisualiser
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Version actuelle
 # Label for the version restore action.
 be.sidebarVersions.restore = Restaurer
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Restaurée par {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Historique de versions
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Basculer
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Numéro de version {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Inconnu
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Taille : du plus petit au plus grand
 # Size descending option shown in the share access drop down select.
