--- a/i18n/ja-JP.properties
+++ b/i18n/ja-JP.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = ダウンロード
 be.sidebarVersions.empty = このファイルで利用できる旧バージョンはありません。
 # Label for the version preview action.
 be.sidebarVersions.preview = プレビュー
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = 現在のバージョンとして設定
 # Label for the version restore action.
 be.sidebarVersions.restore = 復元
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = {name}が復元しました
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = バージョン履歴
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = 切り替え
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = バージョン番号{versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = 不明
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = サイズ: 最小→最大
 # Size descending option shown in the share access drop down select.
