--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Last ned
 be.sidebarVersions.empty = Ingen tidligere versjoner er tilgjengelige for denne filen.
 # Label for the version preview action.
 be.sidebarVersions.preview = Forhåndsvis
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Gjør gjeldende
 # Label for the version restore action.
 be.sidebarVersions.restore = Gjenopprett
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Gjenopprettet av {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versjonshistorikk
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Aktiver/deaktiver
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = Versjon {versionNumber}
 be.sidebarVersions.versionNumberLabel = Versjonsnummer: {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Ukjent
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Størrelse: minst → størst
 # Size descending option shown in the share access drop down select.
