--- a/i18n/nl-NL.properties
+++ b/i18n/nl-NL.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Downloaden
 be.sidebarVersions.empty = Er zijn geen eerdere versies beschikbaar voor dit bestand.
 # Label for the version preview action.
 be.sidebarVersions.preview = Voorbeeld bekijken
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Actief maken
 # Label for the version restore action.
 be.sidebarVersions.restore = Herstellen
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Hersteld door {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Versiegeschiedenis
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = In-/uitschakelen
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Versienummer {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Onbekend
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Grootte: kleinste → grootste
 # Size descending option shown in the share access drop down select.
