--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Pobieranie
 be.sidebarVersions.empty = Brak dostępnych wcześniejszych wersji tego pliku.
 # Label for the version preview action.
 be.sidebarVersions.preview = Wyświetlanie podglądu
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Przywróć wersję jako bieżącą
 # Label for the version restore action.
 be.sidebarVersions.restore = Przywróć
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Przywrócone przez użytkownika {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Historia wersji
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Przełączanie
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = Wersja {versionNumber}
 be.sidebarVersions.versionNumberLabel = Numer wersji: {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Nieznany
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Rozmiar: najmniejszy → największy
 # Size descending option shown in the share access drop down select.
