--- a/i18n/pt-BR.properties
+++ b/i18n/pt-BR.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = Baixar
 be.sidebarVersions.empty = Nenhuma versão anterior disponível para este arquivo
 # Label for the version preview action.
 be.sidebarVersions.preview = Visualizar
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Tornar atual
 # Label for the version restore action.
 be.sidebarVersions.restore = Restaurar
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = Restaurada por {name}
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Histórico de versões
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Alternar
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Número da versão {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Desconhecido
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Tamanho: menor → maior
 # Size descending option shown in the share access drop down select.
