--- a/i18n/tr-TR.properties
+++ b/i18n/tr-TR.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = İndir
 be.sidebarVersions.empty = Bu dosya için önceki bir sürüm mevcut değil.
 # Label for the version preview action.
 be.sidebarVersions.preview = Ön görüntüle
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = Geçerli Kıl
 # Label for the version restore action.
 be.sidebarVersions.restore = Eski Haline Getir
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = {name} tarafından eski haline getirildi
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = Sürüm Geçmişi
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = Aç/Kapat
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = Sürüm numarası {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = Bilinmeyen
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = Boyut: En Küçük → En Büyük
 # Size descending option shown in the share access drop down select.
