--- a/i18n/zh-CN.properties
+++ b/i18n/zh-CN.properties
@@ -322,14 +322,20 @@ be.sidebarVersions.download = 下载
 be.sidebarVersions.empty = 此文件没有可用的旧版本。
 # Label for the version preview action.
 be.sidebarVersions.preview = 预览
+# Header to display for group of versions created in the prior week
+be.sidebarVersions.priorWeek = Last Week
 # Label for the version promote action.
 be.sidebarVersions.promote = 设为当前
 # Label for the version restore action.
 be.sidebarVersions.restore = 恢复
 # Message displayed for a restored version. {name} is the user who performed the action.
 be.sidebarVersions.restoredBy = 由 {name} 还原
+# Header to display for group of versions created in the current month
+be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
 be.sidebarVersions.title = 版本历史记录
+# Header to display for group of versions created yesterday
+be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = 切换
 # Message displayed for an uploaded version. {name} is the user who performed the action.
@@ -340,6 +346,8 @@ be.sidebarVersions.versionNumberBadge = V{versionNumber}
 be.sidebarVersions.versionNumberLabel = 版本号 {versionNumber}
 # Name displayed for unknown or deleted users.
 be.sidebarVersions.versionUserUnknown = 未知
+# Header to display for group of versions created today
+be.sidebarVersions.yesterday = Yesterday
 # Size ascending option shown in the share access drop down select.
 be.sizeASC = 大小：最小 → 最大
 # Size descending option shown in the share access drop down select.
